GET movie and actor endpoints implemented
